Can generate SBT RPM using either Vagrant or docker-compose.

--- a/Makefile.compose
+++ b/Makefile.compose
@@ -1,8 +1,33 @@
-DOCKER_VERSION := $(shell docker --version 2>/dev/null)
-DOCKER_COMPOSE_VERSION := $(shell docker-compose --version 2>/dev/null)
+## Macro functions.
 
+# All versions use a YAML reference so they only have to be defined once,
+# just grep for this reference and print it out.
+config_reference = $(shell cat docker-compose.yml | grep '\&$(1)' | awk '{ print $$3 }' | tr -d "'")
+config_release = $(call config_reference,$(1)_release)
+config_version = $(call config_reference,$(1)_version)
+
+# Variants for getting RPM file names.
+RPMBUILD_DIST := $(call config_reference,rpmbuild_dist)
+rpm_file = RPMS/$(2)/$(1)-$(call config_version,$(1))$(RPMBUILD_DIST).$(2).rpm
+
+# Gets the RPM package name from the filename.
+rpm_package = $(shell echo $(1) | awk '{ split($$0, a, "-"); l = length(a); pkg = a[1]; for (i=2; i<l-1; ++i) pkg = pkg "-" a[i]; print pkg }')
+rpmbuild_version = $(shell echo $(call config_version,$(call rpm_package,$(1))) | awk -F- '{ print $$1 }')
+
+## Variables
+DOCKER_VERSION := $(shell docker --version 2>/dev/null)
+DOCKER_COMPOSE ?= docker-compose
+DOCKER_COMPOSE_VERSION := $(shell $(DOCKER_COMPOSE) --version 2>/dev/null)
+POSTGRES_DOTLESS := $(shell echo $(call config_version,postgres) | tr -d '.')
+RPMBUILD_CHANNEL := $(call config_reference,rpmbuild_channel)
 RPMBUILD_UID := $(shell id -u)
 RPMBUILD_GID := $(shell id -g)
+
+# RPM files at desired versions.
+OSMOSIS_RPM := $(call rpm_file,osmosis,noarch)
+SBT_VERSION := $(call config_version,sbt)
+SBT_RPM := $(call rpm_file,sbt,noarch)
+
 
 all:
 ifndef DOCKER_VERSION
@@ -13,20 +38,32 @@ ifndef DOCKER_COMPOSE_VERSION
 endif
 
 .env: $(ENV_BASE)
-	echo RPMBUILD_GID=$(RPMBUILD_GID) > .env
+	echo COMPOSE_PROJECT_NAME=deps-$(RPMBUILD_CHANNEL) > .env
+	echo RPMBUILD_GID=$(RPMBUILD_GID) >> .env
 	echo RPMBUILD_UID=$(RPMBUILD_UID) >> .env
 
 distclean: .env
-	docker-compose down --volumes --rmi all
-	rm -fr .env RPMS/noarch RPMS/x86_64 SOURCES/*.tar.gz SOURCES/*.tar.xz SOURCES/*.zip
+	$(DOCKER_COMPOSE) down --volumes --rmi all
+	rm -fr .env RPMS/noarch RPMS/x86_64 SOURCES/*.asc SOURCES/*.sha256 SOURCES/*.tgz SOURCES/*.tar.gz SOURCES/*.tar.xz SOURCES/*.zip
 
+# Build containers.
 rpmbuild: .env
-	docker-compose up -d rpmbuild
+	$(DOCKER_COMPOSE) up -d rpmbuild
 
 rpmbuild-generic: .env
-	docker-compose up -d rpmbuild-generic
+	$(DOCKER_COMPOSE) up -d rpmbuild-generic
+
+# RPM targets
+osmosis: rpmbuild-generic
+sbt: rpmbuild-generic $(SBT_RPM)
 
 .PHONY: \
 	all \
-        distclean \
-	rpmbuild
+	distclean \
+	osmosis \
+	rpmbuild \
+	rpmbuild-generic \
+	sbt
+
+RPMS/x86_64/%.rpm RPMS/noarch/%.rpm:
+	docker-compose exec rpmbuild-generic rpmbuild --define "rpmbuild_version $(call rpmbuild_version,$*)" -bb SPECS/$(call rpm_package,$*).spec
