--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ x-build-labels: &rpmbuild_build_labels
 x-versions:
   osmosis: &osmosis_version '0.48.3-1'
   sbt: &sbt_version '1.3.8-1'
+  sqlite: &sqlite_version '3.34.1-1'
 
 x-volumes: &rpmbuild_volumes
   - "./RPMS:/rpmbuild/RPMS:rw"
@@ -42,6 +43,7 @@ services:
       labels:
         <<: *rpmbuild_build_labels
     command: 'tail -f /dev/null'
+    init: true
     volumes: *rpmbuild_volumes
   rpmbuild-generic:
     build:
@@ -54,6 +56,7 @@ services:
     command: 'tail -f /dev/null'
     depends_on:
       - rpmbuild
+    init: true
     volumes: *rpmbuild_volumes
 
 
@@ -73,3 +76,6 @@ x-vagrant:
     sbt:
       image: rpmbuild-generic
       version: *sbt_version
+    sqlite:
+      image: rpmbuild-generic
+      version: *sqlite_version
