--- a/Makefile.compose
+++ b/Makefile.compose
@@ -12,8 +12,10 @@ rpm_file = RPMS/$(2)/$(1)-$(call config_version,$(1))$(RPMBUILD_DIST).$(2).rpm
 
 # Gets the RPM package name from the filename.
 rpm_package = $(shell echo $(1) | awk '{ split($$0, a, "-"); l = length(a); pkg = a[1]; for (i=2; i<l-1; ++i) pkg = pkg "-" a[i]; print pkg }')
+rpmbuild_image = $(call config_reference,$(call rpm_package,$(1))_image)
 rpmbuild_version = $(shell echo $(call config_version,$(call rpm_package,$(1))) | awk -F- '{ print $$1 }')
 rpmbuild_release = $(shell echo $(call config_version,$(call rpm_package,$(1))) | awk -F- '{ print $$2 }')
+
 
 ## Variables
 DOCKER ?= docker
@@ -43,10 +45,11 @@ endif
 .PHONY: \
 	all \
 	distclean \
-	osmosis \
 	rpmbuild \
 	rpmbuild-generic \
-	sbt
+	osmosis \
+	sbt \
+	sqlite \
 
 .env: $(ENV_BASE)
 	echo COMPOSE_PROJECT_NAME=deps-$(RPMBUILD_CHANNEL) > .env
@@ -57,6 +60,9 @@ distclean: .env
 	$(DOCKER_COMPOSE) down --volumes --rmi all
 	rm -fr .env RPMS/noarch RPMS/x86_64 SOURCES/*.asc SOURCES/*.sha256 SOURCES/*.tgz SOURCES/*.tar.gz SOURCES/*.tar.xz SOURCES/*.zip
 
+
+## Container targets
+
 # Build containers.
 rpmbuild: .env
 	$(DOCKER_COMPOSE) up -d rpmbuild
@@ -64,14 +70,19 @@ rpmbuild: .env
 rpmbuild-generic: .env
 	$(DOCKER_COMPOSE) up -d rpmbuild-generic
 
-# RPM targets
+
+## RPM targets
+
 osmosis: rpmbuild-generic $(OSMOSIS_RPM)
 sbt: rpmbuild-generic $(SBT_RPM)
 sqlite: rpmbuild-generic $(SQLITE_RPM)
 
 
+## Build patterns
+
+# Runs container with docker-compose to build rpm.
 RPMS/x86_64/%.rpm RPMS/noarch/%.rpm:
-	docker-compose exec -T rpmbuild-generic rpmbuild \
+	$(DOCKER_COMPOSE) exec -T $(call rpmbuild_image,$*) rpmbuild \
 	--define "rpmbuild_version $(call rpmbuild_version,$*)" \
 	--define "rpmbuild_release $(call rpmbuild_release,$*)" \
 	-bb SPECS/$(call rpm_package,$*).spec
