--- a/Makefile.vagrant
+++ b/Makefile.vagrant
@@ -24,10 +24,13 @@ rpm_package = $(shell echo $(1) | awk '{ split($$0, a, "-"); l = length(a); pkg 
 
 # Default commands for Docker and Vagrant.
 DOCKER ?= docker
+DOCKER_VERSION := $(shell $(DOCKER) --version 2>/dev/null)
 VAGRANT ?= vagrant
+VAGRANT_VERSION := $(shell $(VAGRANT) --version 2>/dev/null)
 POSTGRES_DOTLESS := $(shell echo $(call config_version,postgres) | tr -d '.')
 
 # RPM files at desired versions.
+GEOS_RPM := $(call rpm_file,geos,x86_64)
 LIBGEOTIFF_RPM := $(call rpm_file,libgeotiff,x86_64)
 OSMOSIS_RPM := $(call rpm_file,osmosis,noarch)
 PROJ_RPM := $(call rpm_file,proj,x86_64)
@@ -36,19 +39,36 @@ SQLITE_RPM := $(call rpm_file,sqlite,x86_64)
 
 
 ## General targets
-.PHONY: \
-	all \
-	distclean \
+
+RPMBUILD_CONTAINERS := \
 	rpmbuild \
 	rpmbuild-generic \
+	rpmbuild-geos \
 	rpmbuild-libgeotiff \
 	rpmbuild-proj \
-	rpmbuild-sqlite \
+	rpmbuild-sqlite
+
+RPMBUILD_RPMS := \
+	geos \
 	libgeotiff \
 	osmosis \
 	proj \
 	sbt \
 	sqlite
+
+.PHONY: \
+	all \
+	distclean \
+	$(RPMBUILD_CONTAINERS) \
+	$(RPMBUILD_RPMS)
+
+all:
+ifndef DOCKER_VERSION
+    $(error "command docker is not available, please install Docker")
+endif
+ifndef VAGRANT_VERSION
+    $(error "command vagrant is not available, please install Vagrant")
+endif
 
 distclean:
 	$(VAGRANT) destroy -f --no-parallel || true
@@ -63,6 +83,10 @@ rpmbuild: .vagrant/machines/rpmbuild/docker/id
 rpmbuild-generic: \
 	rpmbuild \
 	.vagrant/machines/rpmbuild-generic/docker/id
+
+rpmbuild-geos: \
+	rpmbuild-generic \
+	.vagrant/machines/rpmbuild-geos/docker/id
 
 rpmbuild-libgeotiff: \
 	proj \
@@ -79,6 +103,7 @@ rpmbuild-sqlite: \
 
 ## RPM targets
 
+geos: rpmbuild-geos $(GEOS_RPM)
 libgeotiff: rpmbuild-libgeotiff $(LIBGEOTIFF_RPM)
 osmosis: rpmbuild-generic $(OSMOSIS_RPM)
 proj: rpmbuild-proj $(PROJ_RPM)
