Add support for ESRI FileGDBAPI RPM.

--- a/Makefile.vagrant
+++ b/Makefile.vagrant
@@ -30,6 +30,7 @@ VAGRANT_VERSION := $(shell $(VAGRANT) --version 2>/dev/null)
 POSTGRES_DOTLESS := $(shell echo $(call config_version,postgres) | tr -d '.')
 
 # RPM files at desired versions.
+FILEGDBAPI_RPM := $(call rpm_file,FileGDBAPI,x86_64)
 GEOS_RPM := $(call rpm_file,geos,x86_64)
 LIBGEOTIFF_RPM := $(call rpm_file,libgeotiff,x86_64)
 OSMOSIS_RPM := $(call rpm_file,osmosis,noarch)
@@ -49,6 +50,7 @@ RPMBUILD_CONTAINERS := \
 	rpmbuild-sqlite
 
 RPMBUILD_RPMS := \
+	FileGDBAPI \
 	geos \
 	libgeotiff \
 	osmosis \
@@ -103,6 +105,7 @@ rpmbuild-sqlite: \
 
 ## RPM targets
 
+FileGDBAPI: rpmbuild-generic $(FILEGDBAPI_RPM)
 geos: rpmbuild-geos $(GEOS_RPM)
 libgeotiff: rpmbuild-libgeotiff $(LIBGEOTIFF_RPM)
 osmosis: rpmbuild-generic $(OSMOSIS_RPM)
