--- a/docker/Dockerfile.rpmbuild-proj
+++ b/docker/Dockerfile.rpmbuild-proj
@@ -8,15 +8,16 @@ COPY RPMS/x86_64/sqlite-${sqlite_version}${RPMBUILD_DIST}.x86_64.rpm \
      RPMS/x86_64/sqlite-devel-${sqlite_version}${RPMBUILD_DIST}.x86_64.rpm \
      /tmp/
 
-RUN yum install -y \
+RUN --mount=type=cache,target=/var/cache/yum \
+    yum install -y \
     /tmp/sqlite-${sqlite_version}${RPMBUILD_DIST}.x86_64.rpm \
     /tmp/sqlite-devel-${sqlite_version}${RPMBUILD_DIST}.x86_64.rpm \
     && \
     rm -f /tmp/*.rpm
 
 # If any package dependencies are needed, install them.
-RUN if [ -n "${packages}" ] ; then yum -q -y install ${packages}; fi && \
-    yum -q -y clean all && \
+RUN --mount=type=cache,target=/var/cache/yum \
+    if [ -n "${packages}" ] ; then yum -q -y install ${packages}; fi && \
     /usr/local/bin/rpmbuild-user.sh && \
     rm -f /usr/local/bin/rpmbuild-user.sh
 
