--- a/docker/Dockerfile.rpmbuild-gdal
+++ b/docker/Dockerfile.rpmbuild-gdal
@@ -49,12 +49,44 @@ RUN --mount=type=cache,target=/var/cache/yum \
     /tmp/sqlite-${sqlite_version}${RPMBUILD_DIST}.x86_64.rpm \
     /tmp/sqlite-devel-${sqlite_version}${RPMBUILD_DIST}.x86_64.rpm \
     && \
-    rm -f /tmp/*.rpm
+    rm -f /tmp/*.rpm && \
+    if [ ! -z "${packages}" ] ; then yum -y install ${packages}; fi
 
-# Install any additionally requested packages and install Python 3 testing
-# packages.
-RUN if [ ! -z "${packages}" ] ; then yum -y install ${packages}; fi && \
-    pip3 install pytest pytest-env pytest-sugar
+# Install Python 3 documentation and packages.
+RUN pip3 install \
+      pytest \
+      pytest-env \
+      pytest-sugar \
+      alabaster==0.7.12 \
+      babel==2.6.0 \
+      beautifulsoup4==4.7.1 \
+      breathe==4.13.0.post0 \
+      bs4==0.0.1 \
+      chardet==3.0.4 \
+      docutils==0.14 \
+      exhale==0.2.2 \
+      idna==2.8 \
+      imagesize==1.1.0 \
+      jinja2==2.10.1 \
+      lxml==4.3.3 \
+      markupsafe==1.1.1 \
+      packaging==19.0 \
+      pygments==2.4.0 \
+      pyparsing==2.4.0 \
+      pytz==2019.1 \
+      requests==2.21.0 \
+      six==1.12.0 \
+      snowballstemmer==1.2.1 \
+      soupsieve==1.9.1 \
+      sphinx==2.0.1 \
+      sphinx-rtd-theme==0.4.3 \
+      sphinxcontrib-applehelp==1.0.1 \
+      sphinxcontrib-devhelp==1.0.1 \
+      sphinxcontrib-htmlhelp==1.0.2 \
+      sphinxcontrib-jsmath==1.0.1 \
+      sphinxcontrib-qthelp==1.0.2 \
+      sphinxcontrib-serializinghtml==1.1.3 \
+      urllib3==1.24.3
 
 # Switch back to RPM build user.
 USER ${RPMBUILD_USER}
